--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.2.10",
+    "@nestjs/websockets": "^10.2.10",
+    "@socket.io/admin-ui": "^0.5.1",
     "@types/uuid": "^9.0.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -34,9 +37,12 @@
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
+    "dotenv": "^16.3.1",
+    "express-session": "^1.17.3",
     "helmet": "^7.0.0",
     "mongoose": "^7.5.3",
     "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "paypal-rest-sdk": "^1.8.1",
     "reflect-metadata": "^0.1.13",
@@ -49,9 +55,11 @@
     "@nestjs/testing": "^10.0.0",
     "@types/cookie-parser": "^1.4.4",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.10",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/passport-google-oauth20": "^2.0.14",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
