--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@reduxjs/toolkit": "^1.9.7",
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
+    "framer-motion": "^10.16.12",
     "next": "14.0.2",
     "react": "^18",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
+    "use-sound": "^4.0.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
