--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "dotenv": "^16.3.1",
     "formik": "^2.4.5",
     "next": "14.0.2",
     "react": "^18",
@@ -18,6 +20,8 @@
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
+    "react-toastify": "^9.1.3",
+    "socket.io-client": "^4.7.2",
     "yup": "^1.3.2"
   },
   "devDependencies": {
