--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "file-loader": "^6.2.0",
     "postcss": "^8",
     "sass": "^1.69.5",
     "tailwindcss": "^3.3.0"
