--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^10.16.12",
     "howler": "^2.2.4",
     "next": "14.0.2",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18",
