--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3001",
     "lint": "next lint"
   },
   "dependencies": {
@@ -18,6 +18,7 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "dotenv": "^16.3.1",
+    "engine.io-client": "^6.5.3",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.12",
     "howler": "^2.2.4",
@@ -32,6 +33,7 @@
     "react-toastify": "^9.1.3",
     "socket.io-client": "^4.7.2",
     "use-sound": "^4.0.1",
+    "ws": "^8.16.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
