--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "formik": "^2.4.5",
     "framer-motion": "^10.16.12",
     "howler": "^2.2.4",
+    "i18next": "^23.7.18",
+    "i18next-browser-languagedetector": "^7.2.0",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18",
+    "react-i18next": "^14.0.1",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
     "react-spinners": "^0.13.8",
