--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "i18next-browser-languagedetector": "^7.2.0",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
+    "next-i18next": "^15.2.0",
+    "next-intl": "^3.5.1",
     "react": "^18",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18",
