change pass && paypal

--- a/.env
+++ b/.env
@@ -9,3 +9,9 @@ FACEBOOK_CLIENT_SECRET=1cb0d2d23e23475b6a662b6b7404d5e7
 
 API_URL=http://localhost:5000
 APP_DOMAIN=http://localhost:3000
+
+PAYPAL_MODE="sandbox"
+PAYPAL_CLIENT_ID="Aemy_6KyAofQ1N3B6f70YDimnFQP63d5zNDRfaE_CDWFqD08FGVSH33c9B1TtcbQj8NaEUTaMuHFF0AL"
+PAYPAL_SECRET="ED925XIaI32ZeBSFhMNIjl7LqelwhYl-CHHqD_xAo0vVg1j5pw4Bz_ONn0vGDYsmMJaKYZlWkggCFbXP"
+PAYPAL_URL='https://api-m.sandbox.paypal.com'
+# PAYPAL_URL='https://api-m.paypal.com'
