--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/websockets": "^10.2.10",
     "@socket.io/admin-ui": "^0.5.1",
     "@types/uuid": "^9.0.4",
+    "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
@@ -42,6 +43,7 @@
     "express-session": "^1.17.3",
     "helmet": "^7.0.0",
     "mongoose": "^7.5.3",
+    "node-fetch": "^3.3.2",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
