paypal integration && game restart fix

--- a/.env
+++ b/.env
@@ -11,7 +11,10 @@ API_URL=http://localhost:5000
 APP_DOMAIN=http://localhost:3000
 
 PAYPAL_MODE="sandbox"
-PAYPAL_CLIENT_ID="Aemy_6KyAofQ1N3B6f70YDimnFQP63d5zNDRfaE_CDWFqD08FGVSH33c9B1TtcbQj8NaEUTaMuHFF0AL"
-PAYPAL_SECRET="ED925XIaI32ZeBSFhMNIjl7LqelwhYl-CHHqD_xAo0vVg1j5pw4Bz_ONn0vGDYsmMJaKYZlWkggCFbXP"
+# PAYPAL_CLIENT_ID="Aemy_6KyAofQ1N3B6f70YDimnFQP63d5zNDRfaE_CDWFqD08FGVSH33c9B1TtcbQj8NaEUTaMuHFF0AL"
+# PAYPAL_SECRET="ED925XIaI32ZeBSFhMNIjl7LqelwhYl-CHHqD_xAo0vVg1j5pw4Bz_ONn0vGDYsmMJaKYZlWkggCFbXP"
+PAYPAL_CLIENT_ID="AfIZfgUiOkmfo-JNj_9Da5g-piQi0YKeZXfJ_EvKcuI7b_QS-HbGtCHe2F1Y9S7ViuAbNk_B2RQOxTS0"
+PAYPAL_SECRET="EC4XHafWfo1q2YBCfGPGjZD-516t-PXpuKoIWkQkej7kaztJ_tVoF5nJEVKl3NP-Nd6cSapI4V8jEZaE"
+
 PAYPAL_URL='https://api-m.sandbox.paypal.com'
 # PAYPAL_URL='https://api-m.paypal.com'
