--- a/.env
+++ b/.env
@@ -18,3 +18,5 @@ PAYPAL_SECRET="EC4XHafWfo1q2YBCfGPGjZD-516t-PXpuKoIWkQkej7kaztJ_tVoF5nJEVKl3NP-N
 
 PAYPAL_URL='https://api-m.sandbox.paypal.com'
 # PAYPAL_URL='https://api-m.paypal.com'
+
+RESEND_KEY="re_AC96Xonx_3SQxtWuiMSpn5wXw4pWSUMxN"
