--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "passport-google-oauth20": "^2.0.0",
     "paypal-rest-sdk": "^1.8.1",
     "reflect-metadata": "^0.1.13",
+    "resend": "^3.2.0",
     "rxjs": "^7.8.1",
     "uuid": "^9.0.1"
   },
